<resources>
    <string name="app_name">PokeSensor</string>
    <string name="title_activity_poke_finder">PokeSensor</string>

    <string name="action_scan">Scan</string>
    <string name="action_tuner">Scan Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_contactus">Contact Us</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_moreapps">More Apps</string>
    <string name="action_update">Check For Updates</string>
    <string name="action_dual_accounts">Login 2nd Account</string>
    <string name="action_dual_logout">Logout 2nd Account</string>
    <string name="action_spawns">My Spawns</string>
    <string name="action_spawn_scan">Spawn Scan</string>
    <string name="action_delete_spawns">Delete All</string>
    <string name="action_filter">Filter Pokemon</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_refresh_accounts">Refresh Accounts</string>
    <string name="action_iv_filter">IV Filter</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_import_accounts">Import Accounts</string>
    <string name="action_export_accounts">Export Accounts</string>
    <string name="action_delete_accounts">Delete All</string>
    <string name="action_import_custom_images">Import Images</string>
    <string name="action_export_custom_images">Export Images</string>
    <string name="action_custom_images">Custom Pokemon Images</string>
    <string name="action_background_scanning">Background Scanning Beta</string>
    <string name="action_discord">Discord</string>
    <string name="action_import_spawns">Import Spawns</string>
    <string name="action_export_spawns">Export Spawns</string>
    <string name="action_api">Paid API Key</string>
    <string name="action_buy_api">Buy API Key</string>

    <string name="loginTitle">Login with a Pokemon Trainer Club account</string>
    <string name="loginMessage">This is an UNOFFICIAL login to the Pokemon Go servers, so you can get the Pokemon data straight from the source\n\nI recommend creating a dummy account to use with this app instead of your real account, in case scanning gets the account banned.\n\nLOGIN AT YOUR OWN RISK</string>
    <string name="username">Enter PTC Username</string>
    <string name="password">Enter PTC Password</string>
    <string name="loginButton">Login</string>
    <string name="cancelButton">Cancel</string>
    <string name="loginSuccessfulMessage">login successful</string>
    <string name="loginFailedMessage">login failed. Go to Help on the toolbar for help with common login problems.</string>
    <string name="loginBanned">login failed. Your account may be banned.</string>
    <string name="accountInactive">account has not been activated. Please activate via the email they sent when you signed up.</string>
    <string name="tryingLoginTitle">Logging in...</string>
    <string name="tryingLoginMessage">Trying to login to Pokemon Go servers. This could take a while if the servers are overloaded.</string>
    <string name="rememberLogin">Remember username and password</string>
    <string name="createAccountMessage"><a href="https://www.pokemon.com/us/pokemon-trainer-club/sign-up/">Don\'t have an account? Create one!</a></string>
    <string name="logoutTitle">Log out?</string>
    <string name="logoutMessage">Are you sure you want to log out?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="getStarted">Get Started</string>
    <string name="tapCancel">(Tap to Cancel)</string>

    <string name="welcomeTitle">Welcome!</string>
    <string name="welcomeMessage">Make sure to enable Location Services for the best app experience.\n\nWARNING: Be careful when using this app. Scanning could get your account banned, so use a dummy account for this app, or at least make the scans look believable.\n\nThe best way to get PokeSensor support or news is via Twitter @LogickLLC</string>

    <string name="abortScan">Scan aborted</string>
    <string name="noLocationDetected">Cannot detect Location Services. Please enable Location Services for the best experience.</string>
    <string name="timeNotGiven">Time not given</string>
    <string name="leavingIn">Leaving in</string>

    <string name="tunerMessage">You can adjust the scan radius, and PokeSensor will scan several sectors to fully cover it. Any Pokemon within the scan circle will reveal itself. Note that wider scans take longer time, as shown by the time estimate below.\n\nYou can also control your movement speed (i.e. how fast the scan moves from one sector to the next).</string>
    <string name="scanTimeLabel">Estimated scan time</string>
    <string name="title_activity_tuner">Scan Settings</string>
    <string name="title_activity_spawns">My Spawns</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_captcha">Captcha</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_iv_filter">IV Filter</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_iv_override">IV Overrides</string>
    <string name="title_activity_custom_images">Custom Images</string>
    <string name="title_activity_background_scanning">Background Scanning Beta</string>
    <string name="title_activity_notification_filter">Notification Filter</string>
    <string name="title_activity_api">Paid Api Key</string>

    <string name="scanTitle">Scan</string>
    <string name="scanDetailsTitle">Scan Details</string>
    <string name="searchTitle">Search</string>

    <string name="scanMessage">Scan your nearby area for Pokemon</string>
    <string name="scanDetailsMessage">Set the distance and time of your scan</string>
    <string name="searchMessage">Search for any location in the world to move to it</string>

    <string name="aboutTitle">About</string>
    <string name="aboutMessage">Made by Patrick Ballard (Logick LLC)\n\nUses PokeGOAPI-Java, available under GPLv3 License at https://github.com/Grover-c13/PokeGOAPI-Java\n\nUses the Trilateration library available under MIT License at https://github.com/lemmingapex/Trilateration\n\nUses the Apache Commons Math3 library available under Apache 2.0 License at http://commons.apache.org/proper/commons-math/download_math.cgi\n\nAction Bar Icons available at icons8.com\nMagnifying glass available under Creative Commons Attribution License at http://freedesignfile.com/\nPokeball image available under Creative Commons Attribution-ShareAlike License at https://commons.wikimedia.org/wiki/File:Poké_Ball.svg\nAvailable under GPLv3 License at https://github.com/MrPat/PokeSensor</string>

    <string name="updateTitle">New Update Available</string>
    <string name="updateMessage">There is a new update available for PokeSensor! Would you like to update?</string>
    <string name="update">Update</string>
    <string name="upToDate">PokeSensor is currently up to date!</string>

    <string name="noMailActivity">Failed to find an email client on your device.</string>
    <string name="logoutError">Failed to logout. Please try again in a few seconds</string>

    <string-array name="imageSizes">
        <item>Small (32px)</item>
        <item>Medium (64px)</item>
        <item>Large (96px)</item>
        <item>XL (128px)</item>
        <item>XXL (256px)</item>
    </string-array>

    <string-array name="imageSizeValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
