<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_action_scan"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_accounts"
        android:icon="@drawable/ic_action_dual_accounts"
        android:title="@string/action_accounts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh_accounts"
        android:icon="@drawable/ic_action_refresh_accounts"
        android:title="@string/action_refresh_accounts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spawns"
        android:icon="@drawable/ic_action_spawns"
        android:title="@string/action_spawns"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_spawn_scan"
        android:icon="@drawable/ic_action_quick"
        android:title="@string/action_spawn_scan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tuner"
        android:icon="@drawable/ic_action_tuner"
        android:title="@string/action_tuner"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_preferences"
        android:icon="@drawable/ic_action_preferences"
        android:title="@string/action_preferences"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_custom_images"
        android:icon="@drawable/ic_action_custom_images"
        android:title="@string/action_custom_images"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_iv_filter"
        android:icon="@drawable/ic_action_iv_filter"
        android:title="@string/action_iv_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_twitter"
        android:icon="@drawable/ic_action_twitter"
        android:title="@string/action_twitter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/ic_action_facebook"
        android:title="@string/action_facebook"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_moreapps"
        android:icon="@drawable/ic_action_moreapps"
        android:title="@string/action_moreapps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contactus"
        android:icon="@drawable/ic_action_contactus"
        android:title="@string/action_contactus"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_action_update"
        android:title="@string/action_update"
        app:showAsAction="never" />
</menu>